fix bug on mobile

--- a/sass/_timeline.scss
+++ b/sass/_timeline.scss
@@ -1,30 +1,50 @@
-.timeline-container{
-  width: 100%;
+.timeline-container {
+    width: 100%;
+    h3 {
+        text-align: center;
+        letter-spacing: 0.1rem;
+        display: none;
+    }
 }
+
 #timeline-inner {
-  & svg {
-    top: 20px;
-  }
-  &.show svg {
-    opacity: 1;
-    transition: 1s;
-  }
-  & path {
-    fill: none;
-    stroke-width: 2.5;
-    opacity: .8;
-    transition: .25s;
-    &:hover {
-      stroke-width: 5;
-      opacity: 1;
+    &.show svg {
+        opacity: 1;
+        transition: 1s;
     }
-  }
-  & .axis {
-    & path,
-    & line {
-      fill: none;
-      stroke: grey;
-      stroke-width: 1;
+    .timeline-line {
+        fill: none;
+        stroke-width: 3;
+        opacity: .5;
+        transition: .25s;
+        &:hover {
+            stroke-width: 5;
+            opacity: 1;
+        }
     }
-  }
+    .timeline-dot {
+        r: 5;
+    }
+    & .axis {
+        & path,
+        & line {
+            fill: none;
+            stroke: grey;
+            stroke-width: 1;
+        }
+    }
+}
+
+@media screen and (max-width: 980px) {
+    .timeline-container {
+        h3 {
+            display: block;
+        }
+    }
+    #timeline-inner .timeline-line {
+        stroke-width: 2;
+    }
+    #timeline-inner .timeline-dot {
+        r: 3;
+    }
 }
