--- a/sass/_wordCollection.scss
+++ b/sass/_wordCollection.scss
@@ -117,6 +117,11 @@ $break-medium: 980px;
 
 .wordCollection-container {
     width: 30%;
+    h3 {
+        text-align: center;
+        letter-spacing: 0.1rem;
+        display: none;
+    }
 }
 
 .advance-section-container {
@@ -131,5 +136,10 @@ $break-medium: 980px;
     .cloud-timeline-container,
     .wordCollection-container {
         width: 100%;
+    }
+    .wordCollection-container {
+        h3 {
+            display: block;
+        }
     }
 }
